crates/pandalang/src/snapshots/pandalang__parser__tests__parses_progs@lambda_shorthand.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_prog(path)
input_file: crates/pandalang/src/snapshot_inputs/progs/lambda_shorthand.panda
---
Ok(
    Program {
        stmts: [
            Let(
                Let {
                    name: "id",
                    value: Fun(
                        Fun {
                            arg: "x",
                            body: Var(
                                Var {
                                    name: "x",
                                },
                            ),
                        },
                    ),
                    rec: false,
                },
            ),
        ],
    },
)
