crates/pandalang/src/snapshots/pandalang__parser__tests__parses_progs@str_of_int.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test_prog(path)
input_file: crates/pandalang/src/snapshot_inputs/progs/str_of_int.panda
---
Ok(
    Program {
        stmts: [
            Declare(
                Declare {
                    name: "str_of_int",
                    typ: Fun(
                        Fun {
                            from: Simple(
                                "Int",
                            ),
                            to: Simple(
                                "Str",
                            ),
                        },
                    ),
                },
            ),
            Let(
                Let {
                    name: "main",
                    value: App(
                        App {
                            fun: Var(
                                Var {
                                    name: "str_of_int",
                                },
                            ),
                            arg: Int(
                                Int {
                                    n: 5,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
